--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 
 language: scala
+scala:
+ - "2.8.0"
+ - "2.8.1"
+ - "2.9.1"
+ - "2.9.2"
+ - "2.10.2"
+ - "2.10.3"
 jdk:
  - "oraclejdk7"
  - "openjdk6"
